{
  "version": 4,
  "terraform_version": "1.4.5",
  "serial": 303,
  "lineage": "4fb1ee1b-474d-ae12-cd94-145396b34ccc",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05e06e3e1ee2aacb3",
            "arn": "arn:aws:ec2:us-east-1:302263057153:elastic-ip/eipalloc-05e06e3e1ee2aacb3",
            "domain": "vpc",
            "id": "eipalloc-05e06e3e1ee2aacb3",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-92-100-137.compute-1.amazonaws.com",
            "public_ip": "3.92.100.137",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jai",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0866a3c8686eaeeba",
            "arn": "arn:aws:ec2:us-east-1:302263057153:instance/i-09a8900e25306c1c7",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09a8900e25306c1c7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ajay",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e873a4eff26579a4",
            "private_dns": "ip-10-60-4-17.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.60.4.17",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0865c8b26ced2a4c2",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04fbd53fd40c9caa8",
            "tags": {
              "Name": "jai-server"
            },
            "tags_all": {
              "Name": "jai-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0383e507902509a46"
            ]
          },
          "dependencies": [
            "aws_security_group.sg",
            "aws_subnet.privatesubnets",
            "aws_vpc.jai"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jai_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0866a3c8686eaeeba",
            "arn": "arn:aws:ec2:us-east-1:302263057153:instance/i-06a60f8d4d53d46d0",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06a60f8d4d53d46d0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ajay",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-099dc69b630f170ad",
            "private_dns": "ip-10-60-1-95.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.60.1.95",
            "public_dns": "ec2-44-200-16-210.compute-1.amazonaws.com",
            "public_ip": "44.200.16.210",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-02ea7e52748aa2cd0",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e23ac4fcd858ada6",
            "tags": {
              "Name": "jai-publicserver"
            },
            "tags_all": {
              "Name": "jai-publicserver"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0383e507902509a46"
            ]
          },
          "dependencies": [
            "aws_security_group.sg",
            "aws_subnet.publicsubnets",
            "aws_vpc.jai"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:302263057153:internet-gateway/igw-06ba533aef89e6822",
            "id": "igw-06ba533aef89e6822",
            "owner_id": "302263057153",
            "tags": {
              "Name": "jai-igw"
            },
            "tags_all": {
              "Name": "jai-igw"
            },
            "vpc_id": "vpc-0b28c1f8131d4fbe1"
          },
          "dependencies": [
            "aws_vpc.jai"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "kishore",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:302263057153:loadbalancer/app/kishore-alb/9aa454f164771bd6",
            "arn_suffix": "app/kishore-alb/9aa454f164771bd6",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "kishore-alb-1196085485.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:302263057153:loadbalancer/app/kishore-alb/9aa454f164771bd6",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "kishore-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0383e507902509a46"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-08a3ff22041aea314"
              },
              {
                "subnet_id": "subnet-0e23ac4fcd858ada6"
              }
            ],
            "subnets": [
              "subnet-08a3ff22041aea314",
              "subnet-0e23ac4fcd858ada6"
            ],
            "vpc_id": "vpc-0b28c1f8131d4fbe1",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.sg",
            "aws_subnet.publicsubnets",
            "aws_vpc.jai"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "varma",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:302263057153:loadbalancer/net/varma-nlb/add35ff5e0cc61d8",
            "arn_suffix": "net/varma-nlb/add35ff5e0cc61d8",
            "dns_name": "varma-nlb-add35ff5e0cc61d8.elb.us-east-1.amazonaws.com",
            "dns_record_client_routing_policy": "any_availability_zone",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:302263057153:loadbalancer/net/varma-nlb/add35ff5e0cc61d8",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "varma-nlb",
            "security_groups": [
              "sg-0383e507902509a46"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-08a3ff22041aea314"
              },
              {
                "subnet_id": "subnet-0e23ac4fcd858ada6"
              }
            ],
            "subnets": [
              "subnet-08a3ff22041aea314",
              "subnet-0e23ac4fcd858ada6"
            ],
            "vpc_id": "vpc-0b28c1f8131d4fbe1",
            "zone_id": "Z26RNL4JYFTOTI"
          },
          "dependencies": [
            "aws_security_group.sg",
            "aws_subnet.publicsubnets",
            "aws_vpc.jai"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "ajay",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:302263057153:listener/app/kishore-alb/9aa454f164771bd6/07e344046e14c043",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:302263057153:targetgroup/venkat-target/9e52f6faaba8d9d6",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:302263057153:listener/app/kishore-alb/9aa454f164771bd6/07e344046e14c043",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:302263057153:loadbalancer/app/kishore-alb/9aa454f164771bd6",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.kishore",
            "aws_lb_target_group.venkat",
            "aws_security_group.sg",
            "aws_subnet.publicsubnets",
            "aws_vpc.jai"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "sai",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:302263057153:listener/net/varma-nlb/add35ff5e0cc61d8/b56361e9030421e1",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:302263057153:targetgroup/venki-target/24e67c7806455ce2",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:302263057153:listener/net/varma-nlb/add35ff5e0cc61d8/b56361e9030421e1",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:302263057153:loadbalancer/net/varma-nlb/add35ff5e0cc61d8",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": 350,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.varma",
            "aws_lb_target_group.venki",
            "aws_security_group.sg",
            "aws_subnet.publicsubnets",
            "aws_vpc.jai"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "venkat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:302263057153:targetgroup/venkat-target/9e52f6faaba8d9d6",
            "arn_suffix": "targetgroup/venkat-target/9e52f6faaba8d9d6",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/index.html",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:302263057153:targetgroup/venkat-target/9e52f6faaba8d9d6",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "venkat-target",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0b28c1f8131d4fbe1"
          },
          "dependencies": [
            "aws_vpc.jai"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "venki",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:302263057153:targetgroup/venki-target/24e67c7806455ce2",
            "arn_suffix": "targetgroup/venki-target/24e67c7806455ce2",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:302263057153:targetgroup/venki-target/24e67c7806455ce2",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "venki-target",
            "port": 8080,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
                "enable_unhealthy_connection_termination": true,
                "unhealthy_draining_interval": 0
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0b28c1f8131d4fbe1"
          },
          "dependencies": [
            "aws_vpc.jai"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "instance_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:302263057153:targetgroup/venki-target/24e67c7806455ce2-20241111164241327300000006",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:302263057153:targetgroup/venki-target/24e67c7806455ce2",
            "target_id": "i-06a60f8d4d53d46d0"
          },
          "dependencies": [
            "aws_instance.jai_1",
            "aws_lb_target_group.venki",
            "aws_security_group.sg",
            "aws_subnet.publicsubnets",
            "aws_vpc.jai"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "instance_attachment_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:302263057153:targetgroup/venkat-target/9e52f6faaba8d9d6-20241111164234351600000005",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:302263057153:targetgroup/venkat-target/9e52f6faaba8d9d6",
            "target_id": "i-09a8900e25306c1c7"
          },
          "dependencies": [
            "aws_instance.jai",
            "aws_lb_target_group.venkat",
            "aws_security_group.sg",
            "aws_subnet.privatesubnets",
            "aws_vpc.jai"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "instance_attachment_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:302263057153:targetgroup/venkat-target/9e52f6faaba8d9d6-20241111164241374100000007",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:302263057153:targetgroup/venkat-target/9e52f6faaba8d9d6",
            "target_id": "i-06a60f8d4d53d46d0"
          },
          "dependencies": [
            "aws_instance.jai_1",
            "aws_lb_target_group.venkat",
            "aws_security_group.sg",
            "aws_subnet.publicsubnets",
            "aws_vpc.jai"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05e06e3e1ee2aacb3",
            "association_id": "eipassoc-0197dddb7c5d7fa6b",
            "connectivity_type": "public",
            "id": "nat-055a31c7cf0533d22",
            "network_interface_id": "eni-0d43aa8675ed3368f",
            "private_ip": "10.60.1.114",
            "public_ip": "3.92.100.137",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e23ac4fcd858ada6",
            "tags": {
              "Name": "gw NAT"
            },
            "tags_all": {
              "Name": "gw NAT"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_subnet.publicsubnets",
            "aws_vpc.jai"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "privatert",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:302263057153:route-table/rtb-0c496bf2f3eb7ea94",
            "id": "rtb-0c496bf2f3eb7ea94",
            "owner_id": "302263057153",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-055a31c7cf0533d22",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "jai-privatert"
            },
            "tags_all": {
              "Name": "jai-privatert"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b28c1f8131d4fbe1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.publicsubnets",
            "aws_vpc.jai"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:302263057153:route-table/rtb-065abe7f4128e36ad",
            "id": "rtb-065abe7f4128e36ad",
            "owner_id": "302263057153",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06ba533aef89e6822",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "jai-rt"
            },
            "tags_all": {
              "Name": "jai-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b28c1f8131d4fbe1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.jai"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "privatesubnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c17a3891d7d181e5",
            "route_table_id": "rtb-0c496bf2f3eb7ea94",
            "subnet_id": "subnet-04fbd53fd40c9caa8"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.privatert",
            "aws_subnet.privatesubnets",
            "aws_subnet.publicsubnets",
            "aws_vpc.jai"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01a4af396cb4cfcc1",
            "route_table_id": "rtb-0c496bf2f3eb7ea94",
            "subnet_id": "subnet-0c0c81e5a5ac4e562"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.privatert",
            "aws_subnet.privatesubnets",
            "aws_subnet.publicsubnets",
            "aws_vpc.jai"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-037b9edc24b729774",
            "route_table_id": "rtb-0c496bf2f3eb7ea94",
            "subnet_id": "subnet-094cd10a4e0831287"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.privatert",
            "aws_subnet.privatesubnets",
            "aws_subnet.publicsubnets",
            "aws_vpc.jai"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "publicsubnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03db4f29df5f552f3",
            "route_table_id": "rtb-065abe7f4128e36ad",
            "subnet_id": "subnet-0e23ac4fcd858ada6"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rt",
            "aws_subnet.publicsubnets",
            "aws_vpc.jai"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-024834c1e808207a3",
            "route_table_id": "rtb-065abe7f4128e36ad",
            "subnet_id": "subnet-08a3ff22041aea314"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rt",
            "aws_subnet.publicsubnets",
            "aws_vpc.jai"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09991af13181d2eb2",
            "route_table_id": "rtb-065abe7f4128e36ad",
            "subnet_id": "subnet-0d90eeaae7ab1d7a2"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rt",
            "aws_subnet.publicsubnets",
            "aws_vpc.jai"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:302263057153:security-group/sg-0383e507902509a46",
            "description": "allow selected rules",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0383e507902509a46",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "dev-sg",
            "name_prefix": "",
            "owner_id": "302263057153",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "jai-sg"
            },
            "tags_all": {
              "Name": "jai-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b28c1f8131d4fbe1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.jai"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privatesubnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:302263057153:subnet/subnet-04fbd53fd40c9caa8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.60.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04fbd53fd40c9caa8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "302263057153",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jai-private1"
            },
            "tags_all": {
              "Name": "jai-private1"
            },
            "vpc_id": "vpc-0b28c1f8131d4fbe1"
          },
          "dependencies": [
            "aws_vpc.jai"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:302263057153:subnet/subnet-0c0c81e5a5ac4e562",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.60.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c0c81e5a5ac4e562",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "302263057153",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jai-private2"
            },
            "tags_all": {
              "Name": "jai-private2"
            },
            "vpc_id": "vpc-0b28c1f8131d4fbe1"
          },
          "dependencies": [
            "aws_vpc.jai"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:302263057153:subnet/subnet-094cd10a4e0831287",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.60.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-094cd10a4e0831287",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "302263057153",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jai-private3"
            },
            "tags_all": {
              "Name": "jai-private3"
            },
            "vpc_id": "vpc-0b28c1f8131d4fbe1"
          },
          "dependencies": [
            "aws_vpc.jai"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicsubnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:302263057153:subnet/subnet-0e23ac4fcd858ada6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.60.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e23ac4fcd858ada6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "302263057153",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jai-public1"
            },
            "tags_all": {
              "Name": "jai-public1"
            },
            "vpc_id": "vpc-0b28c1f8131d4fbe1"
          },
          "dependencies": [
            "aws_vpc.jai"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:302263057153:subnet/subnet-08a3ff22041aea314",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.60.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08a3ff22041aea314",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "302263057153",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jai-public2"
            },
            "tags_all": {
              "Name": "jai-public2"
            },
            "vpc_id": "vpc-0b28c1f8131d4fbe1"
          },
          "dependencies": [
            "aws_vpc.jai"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:302263057153:subnet/subnet-0d90eeaae7ab1d7a2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.60.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d90eeaae7ab1d7a2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "302263057153",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jai-public3"
            },
            "tags_all": {
              "Name": "jai-public3"
            },
            "vpc_id": "vpc-0b28c1f8131d4fbe1"
          },
          "dependencies": [
            "aws_vpc.jai"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "jai",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:302263057153:vpc/vpc-0b28c1f8131d4fbe1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.60.0.0/16",
            "default_network_acl_id": "acl-03aed765a2ac93334",
            "default_route_table_id": "rtb-091bdc3aec4882315",
            "default_security_group_id": "sg-052e02d22919bbd10",
            "dhcp_options_id": "dopt-0592dcc59dc5db81a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b28c1f8131d4fbe1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-091bdc3aec4882315",
            "owner_id": "302263057153",
            "tags": {
              "Name": "jai"
            },
            "tags_all": {
              "Name": "jai"
            }
          }
        }
      ]
    }
  ]
}